# pitot

./: .coveragerc  .gitignore  .pre-commit-config.yaml  license.txt  pitot.code-workspace  pyproject.toml  readme.md
.github/workflows/: pypi-publish.yml  run-tests.yml
src/pitot/: __init__.py  aero.py  aero.pyi  airac.py  convert.py  convert.pyi  geodesy.py  geodesy.pyi  isa.py  isa.pyi  types.py  wrapper.py
src/pitot/couscous/: Visitor.py  __init__.py  isa.py  wrapper.py
tests/: isa_table.txt  test_aero.py  test_convert.py  test_geodesy.py  test_isa.py  test_perf.py
tests/couscous/: test_assignments.py  test_calculations.py  test_fonction_calls.py
tests/impunity/: test_assignments.py  test_calculations.py  test_fonction_calls.py
