[tool.poetry]
name = "pitot"
version = "0.3.1"
description = "Toolbox for aeronautic units and conversions"
authors = ["Xavier Olive <git@xoolive.org>", "Junzi Sun <junzisun@gmail.com>"]
license = "MIT"
readme = "readme.md"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Topic :: Software Development :: Libraries",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Typing :: Typed",
]
include = [
  "license.txt",
  "py.typed"
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = ">=1.23.0"
pandas = ">=1.4.3"
typing-extensions = ">=4.3.0"
pyproj = ">=3.3.1"
impunity = ">=1.0.3"
# impunity = { path = "../impunity", develop = true }

[tool.poetry.group.dev.dependencies]
mypy = ">=0.991"
black = ">=22.12.0"
pytest = ">=7.1.2"
pytest-cov = ">=4.0.0"
pre-commit = ">=2.20.0"
ruff = ">=0.0.253"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
target_version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    __pycache__
  | \.git
  | \.mypy_cache
  | \.ipynb_checkpoints
  | build
  | dist
)/
'''

[tool.ruff]
select = [
  "E", "W",  # pycodestyle
  "F",  # pyflakes
  "I",  # isort
  "NPY",  # numpy
  # "PD",  # pandas
  "DTZ", # flake8-datetimez
  "RUF"
]
line-length = 80
target-version = "py38"

[tool.ruff.isort]
known-first-party = ["numpy", "pandas", "pyproj", "shapely"]

[tool.mypy]
python_version = 3.8
platform = "posix"

color_output = true
pretty = true
show_column_numbers = true
strict = true

# probably redundant, but useful when switching strict to false
check_untyped_defs = true
ignore_missing_imports = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = "--log-level=INFO --color=yes --doctest-modules --doctest-report ndiff"
filterwarnings = [
  "ignore:.*unit of the quantity is strip.*:"
]
testpaths = ["tests", "src"]
doctest_optionflags = ["NORMALIZE_WHITESPACE", "ELLIPSIS", "NUMBER"]
