[project]
name = "pitot"
version = "0.3.2"
description = "Toolbox for aeronautic units and conversions"
authors = [
  { name = "Xavier Olive", email = "git@xoolive.org" },
  { name = "Junzi Sun", email = "j.sun-1@tudelft.nl" },
]
license = "MIT"
readme = "readme.md"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Topic :: Software Development :: Libraries",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = [
  "impunity>=1.0.5",
  "numpy>=2.0.2; python_version<'3.10'",
  "numpy>=2.1.3; python_version>='3.10'",
  "pandas>=2.2.3",
  "typing-extensions>=4.12.2",
  "pyproj<3.7.1; python_version<'3.10'",
  "pyproj>=3.7.0; python_version>='3.10'",
]

[dependency-groups]
dev = [
  "mypy>=1.13.0",
  "pytest>=8.3.3",
  "pytest-cov>=6.0.0",
  "ruff>=0.7.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
lint.select = [
  "E",
  "W",   # pycodestyle
  "F",   # pyflakes
  "I",   # isort
  "NPY", # numpy
  # "PD",  # pandas
  "DTZ", # flake8-datetimez
  "RUF",
]
line-length = 80
target-version = "py39"

[tool.ruff.lint.isort]
known-first-party = ["numpy", "pandas", "pyproj", "shapely"]

[tool.mypy]
python_version = "3.9"
platform = "posix"

color_output = true
pretty = true
show_column_numbers = true
strict = true

# probably redundant, but useful when switching strict to false
check_untyped_defs = true
ignore_missing_imports = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = "--log-level=INFO --color=yes --doctest-modules --doctest-report ndiff"
filterwarnings = ["ignore:.*unit of the quantity is strip.*:"]
testpaths = ["tests", "src"]
doctest_optionflags = ["NORMALIZE_WHITESPACE", "ELLIPSIS", "NUMBER"]
